--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "jest": "26.6.0",
     "stylelint": "13.8.0",
     "stylelint-order": "4.1.0"
+  },
+  "engines": {
+    "nodejs": "18.16.1",
+    "npm": "7.20.3"
   }
 }
