--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mailgun-js": "^0.22.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "4.0.3",
     "web-vitals": "1.1.2"
@@ -45,9 +46,5 @@
     "jest": "26.6.0",
     "stylelint": "13.8.0",
     "stylelint-order": "4.1.0"
-  },
-  "engines": {
-    "nodejs": "18.16.1",
-    "npm": "7.20.3"
   }
 }
