--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "web-vitals": "1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & npm run proxy",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "proxy": "lcp --proxyUrl https://dados.pe.gov.br"
   },
   "eslintConfig": {
     "extends": [
