--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mailgun-js": "^0.22.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-charts": "^4.0.1",
     "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "4.0.3",
