feat: Implement Observatory BE

--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "web-vitals": "1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start & npm run proxy",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "proxy": "lcp --proxyUrl https://dados.pe.gov.br"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
